gradient on header p text removed below 300px to avoid it showing when text is wrapping to two lines

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -450,9 +450,10 @@ footer i {
     order: 6;
 }
 
-@media (width < 300) {
+
+@media (width < 300px) {
     header p {
-        display: none;
+        background:#540B51;
+        -webkit-text-fill-color: unset;
     }
-    
 }
